# arxiv_paper_mcp

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
.devcontainer/: Dockerfile  devcontainer.json
src/arxiv_paper_mcp/: main.py  server.py
src/arxiv_paper_mcp/config/: global_resources.py
src/arxiv_paper_mcp/llm/: chains.py  llm_define.py  prompts.py
src/arxiv_paper_mcp/llm_chains/: chains.py  prompts.py
src/arxiv_paper_mcp/utils/arxiv_search/: arxiv_search_utils.py
src/arxiv_paper_mcp/utils/arxiv_utils/: arxiv_search_utils.py
src/arxiv_paper_mcp/utils/common/: common_utils.py  llm_output_postprocess.py  pdf_handling.py
src/arxiv_paper_mcp/utils/paper_utils/: paper_analysis_utils.py  paper_download_utils.py  paper_section_utils.py
src/setup/: claude_desktop.py  cursor.py
